tests/parsing/smtlib/mcil/errors/238_define-system_bad_subsys_decl_5.expected
File "tests/parsing/smtlib/mcil/errors/238_define-system_bad_subsys_decl_5.mcil", line 1, character 35-36:
1 | (define-system sys :subsys (a (b c _)))
                                       ^
Error while parsing a subsystem instantiation, read the reserved word '_',
      but expected a symbol or a closing parenthesis.
